docs/flowi-ui/flowi-ui-service.yml
apiVersion: v1
kind: Service
metadata:
  name: flowi-ui-service
  namespace: flowi
spec:
  selector:
    app: flowi-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
